# events-system

./: README.md  events.db  pyproject.toml
config/: consumer_config.yaml  propagator_config.yaml
event_consumer/: api.py  config.py  database.py  main.py  models.py
event_propagator/: config.py  event_loader.py  event_sender.py  main.py
events/: events.json
